cip-macros/tests/ui/cip_class_missing_id.stderr
error: Missing field `id`
 --> tests/ui/cip_class_missing_id.rs:3:1
  |
3 | #[cip_class(name = "MyClass")]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `cip_class` (in Nightly builds, run with -Z macro-backtrace for more info)
