cip-macros/tests/ui/cip_class_missing_id.rs
use cip_macros::cip_class;

#[cip_class(name = "MyClass")]
struct MyClass {}

fn main() {}
